# AgentHUB-V2

./: README.md  psnr_ssim_calculator.py  test_output.txt
backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: apps.py  chat.py  context.py  mcp.py  memory.py  rag.py  research.py  sessions.py  skills.py  software_engineering.py
backend/app/apps/: __init__.py
backend/app/apps/chat/: agent.py  capabilities.py  manifest.py  prompts.py
backend/app/apps/deep_research/: __init__.py  agent.py  archive.py  capabilities.py  manifest.py  models.py  planner.py  prompts.py  reporter.py  summarizer.py
backend/app/apps/software_engineering/: agent.py  archive.py  manifest.py  models.py  prompts.py  runtime.py  tools.py
backend/app/platform/: __init__.py
backend/app/platform/apps/: __init__.py  manifest.py  profiles.py  registry.py
backend/app/platform/capabilities/: __init__.py  contracts.py
backend/app/platform/context/: __init__.py  builder.py  providers.py  registry.py  types.py
backend/app/platform/core/: __init__.py  errors.py  message.py  types.py
backend/app/platform/history/: __init__.py  service.py  store.py
backend/app/platform/memory/: __init__.py  (+9 more)
backend/config/: platform.example.toml  platform.toml
backend/eval/: __init__.py
backend/eval/software_engineering/: __init__.py  baseline.py  cases.py  eval_runner.py
backend/scripts/: run_memory_eval.py  run_rag_eval.py  run_se_eval.py
backend/tmp/se_psnr_demo/: run_check.py
backend/tmp/se_psnr_demo2/: run_check.py
(+300 files in other folders)
