[project]
name = "agent-platform-v1-backend"
version = "0.1.0"
description = "Self-built multi-agent application platform backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "beautifulsoup4>=4.13.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "neo4j>=6.0.0",
    "pypdf>=5.9.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
